<resources>
    <string name="app_name">Labs20201-Gr01</string>
    <string name="info_personal">Información personal</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="sexo">Sexo:</string>
    <string name="datePicker">Cambiar</string>
    <string name="Primaria">Primaria</string>
    <string name="Secundaria">Secundaria</string>
    <string name="Universidad">Universidad</string>
    <string name="Otra">Otra</string>
    <string name="grado_escolaridad">Grado de escolaridad</string>
    <string name="grado_de_escolaridad">Grado de escolaridad</string>
    <string name="apellidos">Apellidos</string>
    <string name="Nombre">Nombres</string>
    <string name="Siguiente">Siguiente</string>
    <string name="ErrorNombres">Faltan datos</string>
    <string name="box_tittle">Contact Information</string>
    <string name="button_one">Button One</string>
    <string name="button_two">Button Two</string>
</resources>